--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tail":"tailwindcss -i ./src/style.css -o ./dist/style.css --watch"
+    "tail": "tailwindcss -i ./src/style.css -o ./dist/style.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1",
     "vite": "^4.3.0"
+  },
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001481",
+    "typed.js": "^2.0.15"
   }
 }
