--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tail": "tailwindcss -i ./src/style.css -o ./dist/style.css --watch"
+    "tail": "npx tailwindcss -i ./src/style.css -o ./dist/style.css --watch",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.1",
     "vite": "^4.3.0"
   },
